fix: address security review findings in backend
- Use StandardCharsets.UTF_8 in JwtTokenProvider for consistent encoding
- Add @PostConstruct validation requiring JWT_SECRET to be set and >=32 bytes
- Remove useSSL=false default from datasource URL
- Externalize CORS allowed origins to cors.allowed-origins property
- Externalize admin initial password to admin.initial-password property
- Log warning after admin user creation to prompt password change

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

Co-authored-by: qwnsvunoffocial <164020879+qwnsvunoffocial@users.noreply.github.com>